correccion de bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=inventarios
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@jjpfcu7tmc8bvugs_high?TNS_ADMIN=/app/wallet
 spring.datasource.url=jdbc:oracle:thin:@ecomarket_high?TNS_ADMIN=C:/wallet
 spring.datasource.username=ADMIN
 spring.datasource.password=Matidroidde1306@
@@ -11,3 +10,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # application.properties
+api.key=ecomarket1554
+external.api.key=ecomarket1554
+
+security.api.key.enabled=true
+
+
